add title and filter btn

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="asset/boostrap/bootstrap.css">
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <h1>Time Table Design</h1>
+  <!-- aung si thu code  -->
+        <div class="container d-flex justify-content-between">
+            <div class="text-primary fw-bold p-1">
+               <span class="fs-3 text-primary  ">Timetable Viewer</span> 
+            </div>
+            <div class="p-1">
+                <button class="bg-success btn"> <span class="text-white">FILTER</span></button>
+            </div>
+        </div>
+  <!-- end aung si thu code  -->
+  
+  <!-- <h1>Time Table Design</h1>
     <button>FILTER</button>
     <div class="container">
         <div class="rectangle"></div>
@@ -17,6 +29,7 @@
         <div class="rectangle"></div>
         <div class="rectangle"></div>
         <div class="rectangle"></div>
-    </div>
+    </div> -->
+    <script src="asset/boostrap/bootstrap.js"></script>
 </body>
 </html>
